fix(core): expand remaining wildcard imports and apply spotless formatting
Completes wildcard expansion across all remaining entity, controller, and
test files in xinco-core. Spotless reformatting applied to docs and pom.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01DRzh9haZPafQxa5TSjbgRw